ffigen/LabSoundHelper.h

void AnalyserNode_setSmoothingTimeConstant(int nodeId, double k);
int AnalyserNode_smoothingTimeConstant(int nodeId);
// frequency bins, reported in db
void AnalyserNode_getFloatFrequencyData(int nodeId, float* array);
// frequency bins, reported as a linear mapping of minDecibels to maxDecibles onto 0-255.
// if resample is true, then the computed values will be linearly resampled
void AnalyserNode_getByteFrequencyData(int nodeId, uint8_t* array, int resample);
void AnalyserNode_getFloatTimeDomainData(int nodeId, float* array);
void AnalyserNode_getByteTimeDomainData(int nodeId, uint8_t* array);
//////////////////////
/// OscillatorNode ///
//////////////////////

int createOscillatorNode(AudioContext* context);
int OscillatorNode_type(int nodeId);
void OscillatorNode_setType(int nodeId, int type);
// default 1.0
int OscillatorNode_amplitude(int nodeId);
// hz
int OscillatorNode_frequency(int nodeId);
// default 0.0
int OscillatorNode_bias(int nodeId);
// Detune value in Cents.
int OscillatorNode_detune(int nodeId);
/// BiquadFilterNode
int createBiquadFilterNode(AudioContext* context);
int BiquadFilterNode_type(int nodeId);
void BiquadFilterNode_setType(int nodeId, int type);
int BiquadFilterNode_frequency(int nodeId);
int BiquadFilterNode_q(int nodeId);
int BiquadFilterNode_gain(int nodeId);
int BiquadFilterNode_detune(int nodeId);
//////////////////
/// PannerNode ///
//////////////////

int createPannerNode(AudioContext* context);
int PannerNode_panningModel(int nodeId);
void PannerNode_setPanningModel(int nodeId, int m);
int PannerNode_distanceModel(int nodeId);
void PannerNode_setDistanceModel(int nodeId, int m);
void PannerNode_setPosition(int nodeId, float x, float y, float z);
int PannerNode_positionX(int nodeId);
int PannerNode_positionY(int nodeId);
int PannerNode_positionZ(int nodeId);