lib/tau_labs_bindings_generated.dart


  late final _AnalyserNode_setSmoothingTimeConstantPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Double)>>(
        'AnalyserNode_setSmoothingTimeConstant',
      );
  late final _AnalyserNode_setSmoothingTimeConstant =
      _AnalyserNode_setSmoothingTimeConstantPtr.asFunction<
        void Function(int, double)
      >();

  int AnalyserNode_smoothingTimeConstant(int nodeId) {
    return _AnalyserNode_smoothingTimeConstant(nodeId);
  }

  late final _AnalyserNode_smoothingTimeConstantPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'AnalyserNode_smoothingTimeConstant',
      );
  late final _AnalyserNode_smoothingTimeConstant =
      _AnalyserNode_smoothingTimeConstantPtr.asFunction<int Function(int)>();

  /// frequency bins, reported in db
  void AnalyserNode_getFloatFrequencyData(
    int nodeId,
    ffi.Pointer<ffi.Float> array,
  ) {
    return _AnalyserNode_getFloatFrequencyData(nodeId, array);
  }

  late final _AnalyserNode_getFloatFrequencyDataPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Pointer<ffi.Float>)>
  >('AnalyserNode_getFloatFrequencyData');
  late final _AnalyserNode_getFloatFrequencyData =
      _AnalyserNode_getFloatFrequencyDataPtr.asFunction<
        void Function(int, ffi.Pointer<ffi.Float>)
      >();

  /// frequency bins, reported as a linear mapping of minDecibels to maxDecibles onto 0-255.
  /// if resample is true, then the computed values will be linearly resampled
  void AnalyserNode_getByteFrequencyData(
    int nodeId,
    ffi.Pointer<ffi.Uint8> array,
    int resample,
  ) {
    return _AnalyserNode_getByteFrequencyData(nodeId, array, resample);
  }

  late final _AnalyserNode_getByteFrequencyDataPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Int, ffi.Pointer<ffi.Uint8>, ffi.Int)
    >
  >('AnalyserNode_getByteFrequencyData');
  late final _AnalyserNode_getByteFrequencyData =
      _AnalyserNode_getByteFrequencyDataPtr.asFunction<
        void Function(int, ffi.Pointer<ffi.Uint8>, int)
      >();

  void AnalyserNode_getFloatTimeDomainData(
    int nodeId,
    ffi.Pointer<ffi.Float> array,
  ) {
    return _AnalyserNode_getFloatTimeDomainData(nodeId, array);
  }

  late final _AnalyserNode_getFloatTimeDomainDataPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Pointer<ffi.Float>)>
  >('AnalyserNode_getFloatTimeDomainData');
  late final _AnalyserNode_getFloatTimeDomainData =
      _AnalyserNode_getFloatTimeDomainDataPtr.asFunction<
        void Function(int, ffi.Pointer<ffi.Float>)
      >();

  void AnalyserNode_getByteTimeDomainData(
    int nodeId,
    ffi.Pointer<ffi.Uint8> array,
  ) {
    return _AnalyserNode_getByteTimeDomainData(nodeId, array);
  }

  late final _AnalyserNode_getByteTimeDomainDataPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Pointer<ffi.Uint8>)>
  >('AnalyserNode_getByteTimeDomainData');
  late final _AnalyserNode_getByteTimeDomainData =
      _AnalyserNode_getByteTimeDomainDataPtr.asFunction<
        void Function(int, ffi.Pointer<ffi.Uint8>)
      >();

  /// ///////////////////
  /// OscillatorNode ///
  /// ///////////////////
  int createOscillatorNode(ffi.Pointer<ffi.Void> context) {
    return _createOscillatorNode(context);
  }

  late final _createOscillatorNodePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
        'createOscillatorNode',
      );
  late final _createOscillatorNode =
      _createOscillatorNodePtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int OscillatorNode_type(int nodeId) {
    return _OscillatorNode_type(nodeId);
  }

  late final _OscillatorNode_typePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'OscillatorNode_type',
      );
  late final _OscillatorNode_type =
      _OscillatorNode_typePtr.asFunction<int Function(int)>();

  void OscillatorNode_setType(int nodeId, int type) {
    return _OscillatorNode_setType(nodeId, type);
  }

  late final _OscillatorNode_setTypePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int)>>(
        'OscillatorNode_setType',
      );
  late final _OscillatorNode_setType =
      _OscillatorNode_setTypePtr.asFunction<void Function(int, int)>();

  /// default 1.0
  int OscillatorNode_amplitude(int nodeId) {
    return _OscillatorNode_amplitude(nodeId);
  }

  late final _OscillatorNode_amplitudePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'OscillatorNode_amplitude',
      );
  late final _OscillatorNode_amplitude =
      _OscillatorNode_amplitudePtr.asFunction<int Function(int)>();

  /// hz
  int OscillatorNode_frequency(int nodeId) {
    return _OscillatorNode_frequency(nodeId);
  }

  late final _OscillatorNode_frequencyPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'OscillatorNode_frequency',
      );
  late final _OscillatorNode_frequency =
      _OscillatorNode_frequencyPtr.asFunction<int Function(int)>();

  /// default 0.0
  int OscillatorNode_bias(int nodeId) {
    return _OscillatorNode_bias(nodeId);
  }

  late final _OscillatorNode_biasPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'OscillatorNode_bias',
      );
  late final _OscillatorNode_bias =
      _OscillatorNode_biasPtr.asFunction<int Function(int)>();

  /// Detune value in Cents.
  int OscillatorNode_detune(int nodeId) {
    return _OscillatorNode_detune(nodeId);
  }

  late final _OscillatorNode_detunePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'OscillatorNode_detune',
      );
  late final _OscillatorNode_detune =
      _OscillatorNode_detunePtr.asFunction<int Function(int)>();

  /// BiquadFilterNode
  int createBiquadFilterNode(ffi.Pointer<ffi.Void> context) {
    return _createBiquadFilterNode(context);
  }

  late final _createBiquadFilterNodePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
        'createBiquadFilterNode',
      );
  late final _createBiquadFilterNode =
      _createBiquadFilterNodePtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int BiquadFilterNode_type(int nodeId) {
    return _BiquadFilterNode_type(nodeId);
  }

  late final _BiquadFilterNode_typePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'BiquadFilterNode_type',
      );
  late final _BiquadFilterNode_type =
      _BiquadFilterNode_typePtr.asFunction<int Function(int)>();

  void BiquadFilterNode_setType(int nodeId, int type) {
    return _BiquadFilterNode_setType(nodeId, type);
  }

  late final _BiquadFilterNode_setTypePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int)>>(
        'BiquadFilterNode_setType',
      );
  late final _BiquadFilterNode_setType =
      _BiquadFilterNode_setTypePtr.asFunction<void Function(int, int)>();

  int BiquadFilterNode_frequency(int nodeId) {
    return _BiquadFilterNode_frequency(nodeId);
  }

  late final _BiquadFilterNode_frequencyPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'BiquadFilterNode_frequency',
      );
  late final _BiquadFilterNode_frequency =
      _BiquadFilterNode_frequencyPtr.asFunction<int Function(int)>();

  int BiquadFilterNode_q(int nodeId) {
    return _BiquadFilterNode_q(nodeId);
  }

  late final _BiquadFilterNode_qPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'BiquadFilterNode_q',
      );
  late final _BiquadFilterNode_q =
      _BiquadFilterNode_qPtr.asFunction<int Function(int)>();

  int BiquadFilterNode_gain(int nodeId) {
    return _BiquadFilterNode_gain(nodeId);
  }

  late final _BiquadFilterNode_gainPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'BiquadFilterNode_gain',
      );
  late final _BiquadFilterNode_gain =
      _BiquadFilterNode_gainPtr.asFunction<int Function(int)>();

  int BiquadFilterNode_detune(int nodeId) {
    return _BiquadFilterNode_detune(nodeId);
  }

  late final _BiquadFilterNode_detunePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'BiquadFilterNode_detune',
      );
  late final _BiquadFilterNode_detune =
      _BiquadFilterNode_detunePtr.asFunction<int Function(int)>();

  /// ///////////////
  /// PannerNode ///
  /// ///////////////
  int createPannerNode(ffi.Pointer<ffi.Void> context) {
    return _createPannerNode(context);
  }

  late final _createPannerNodePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
        'createPannerNode',
      );
  late final _createPannerNode =
      _createPannerNodePtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int PannerNode_panningModel(int nodeId) {
    return _PannerNode_panningModel(nodeId);
  }

  late final _PannerNode_panningModelPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'PannerNode_panningModel',
      );
  late final _PannerNode_panningModel =
      _PannerNode_panningModelPtr.asFunction<int Function(int)>();

  void PannerNode_setPanningModel(int nodeId, int m) {
    return _PannerNode_setPanningModel(nodeId, m);
  }

  late final _PannerNode_setPanningModelPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int)>>(
        'PannerNode_setPanningModel',
      );
  late final _PannerNode_setPanningModel =
      _PannerNode_setPanningModelPtr.asFunction<void Function(int, int)>();

  int PannerNode_distanceModel(int nodeId) {
    return _PannerNode_distanceModel(nodeId);
  }

  late final _PannerNode_distanceModelPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'PannerNode_distanceModel',
      );
  late final _PannerNode_distanceModel =
      _PannerNode_distanceModelPtr.asFunction<int Function(int)>();

  void PannerNode_setDistanceModel(int nodeId, int m) {
    return _PannerNode_setDistanceModel(nodeId, m);
  }

  late final _PannerNode_setDistanceModelPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int)>>(
        'PannerNode_setDistanceModel',
      );
  late final _PannerNode_setDistanceModel =
      _PannerNode_setDistanceModelPtr.asFunction<void Function(int, int)>();

  void PannerNode_setPosition(int nodeId, double x, double y, double z) {
    return _PannerNode_setPosition(nodeId, x, y, z);
  }

  late final _PannerNode_setPositionPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Int, ffi.Float, ffi.Float, ffi.Float)
    >
  >('PannerNode_setPosition');
  late final _PannerNode_setPosition =
      _PannerNode_setPositionPtr.asFunction<
        void Function(int, double, double, double)
      >();

  int PannerNode_positionX(int nodeId) {
    return _PannerNode_positionX(nodeId);
  }

  late final _PannerNode_positionXPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'PannerNode_positionX',
      );
  late final _PannerNode_positionX =
      _PannerNode_positionXPtr.asFunction<int Function(int)>();

  int PannerNode_positionY(int nodeId) {
    return _PannerNode_positionY(nodeId);
  }

  late final _PannerNode_positionYPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'PannerNode_positionY',
      );
  late final _PannerNode_positionY =
      _PannerNode_positionYPtr.asFunction<int Function(int)>();

  int PannerNode_positionZ(int nodeId) {
    return _PannerNode_positionZ(nodeId);
  }

  late final _PannerNode_positionZPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'PannerNode_positionZ',
      );
  late final _PannerNode_positionZ =
      _PannerNode_positionZPtr.asFunction<int Function(int)>();
